--- a/distiller_jn.ipynb
+++ b/distiller_jn.ipynb
@@ -172,29 +172,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<nnabla.models.imagenet.resnet.ResNet18 at 0x12492ea20>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "attr"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-08-26 17:29:16,373 [nnabla][INFO]: DataSource with shuffle(True)\n",
-      "2020-08-26 17:29:16,388 [nnabla][INFO]: Using DataIterator\n"
+      "2020-08-27 15:30:30,370 [nnabla][INFO]: DataSource with shuffle(True)\n",
+      "2020-08-27 15:30:30,449 [nnabla][INFO]: Using DataIterator\n"
      ]
     }
    ],
@@ -207,6 +222,42 @@
     "                                    rng=None, \n",
     "                                    with_memory_cache=False,\n",
     "                                    with_file_cache=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img, _ = uniform_data_iterator.next()\n",
+    "dst_img = nn.Variable(img.shape, need_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = model(input_var=dst_img, returns_net=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<nnabla.utils.nnp_graph.NnpNetwork object at 0x1252d47b8>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tmp)"
    ]
   },
   {
@@ -224,6 +275,105 @@
    ],
    "source": [
     "generated_img = data_distill(model, uniform_data_iterator, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uniform_mean = (0 + 255) / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2221249999999999"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(uniform_mean * 0.01735) - 1.99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(np.sqrt(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ResNet18()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = nn.Variable((1,) + model.input_shape)\n",
+    "y = model(X)\n",
+    "y.forward()\n",
+    "m = X.function_references[0].outputs[0].d / X.d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[MulScalar]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.function_references"
    ]
   },
   {
