--- a/distiller_jn.ipynb
+++ b/distiller_jn.ipynb
@@ -328,6 +328,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imagenet_mean=nn.Variable.from_numpy_array(np.array([[0,485, 0,456, 0,406]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Variable((1, 6), need_grad=False) at 0x125229c28>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imagenet_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
